--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
-streamlit
-langchain
-openai
-yt-dlp
-librosa
-soundfile
-opencv-python
-moviepy
-spleeter
-lyricsgenius
-numpy
-requests
+streamlit>=1.28.0
+langchain>=0.0.350
+openai>=1.3.0
+yt-dlp>=2023.9.24
+librosa>=0.10.1
+soundfile>=0.12.1
+opencv-python>=4.8.0
+moviepy>=1.0.3
+demucs>=4.0.1
+torch>=2.0.0
+torchaudio>=2.0.0
+lyricsgenius>=3.0.1
+numpy>=1.24.0
+requests>=2.31.0
+scipy>=1.11.0
